--- a/app/src/free/AndroidManifest.xml
+++ b/app/src/free/AndroidManifest.xml
@@ -1,47 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.abdelmun3m.movie_land"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.abdelmun3m.movie_land">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <!--<uses-permission android:name="android.permission.LOCATION_HARDWARE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+
         <activity
-            android:name=".Views.ViewDetail"
+            android:name="com.abdelmun3m.movie_land.Views.ViewDetail"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <provider
-            android:name=".MoviesProvider.MoviesContentProvider"
+            android:name="com.abdelmun3m.movie_land.MoviesProvider.MoviesContentProvider"
             android:authorities="com.abdelmun3m.movie_land"
             android:exported="false" />
 
         <service
-            android:name=".FavoriteMovieIntentTask.FavoriteMovieService"
+            android:name="com.abdelmun3m.movie_land.FavoriteMovieIntentTask.FavoriteMovieService"
             android:exported="false" />
 
         <activity
-            android:name=".Views.ViewMain"
+            android:name="com.abdelmun3m.movie_land.free.ViewMain"
             android:label="@string/title_activity_view_main"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".Views.MovieDisplayActivity"
+            android:name="com.abdelmun3m.movie_land.Views.MovieDisplayActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_movie_display"
             android:theme="@style/FullscreenTheme" />
 
-        <receiver android:name=".Widget.MovieWidget">
+        <receiver android:name="com.abdelmun3m.movie_land.Widget.MovieWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -50,6 +58,12 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/movie_widget_info" />
         </receiver>
+
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
+
     </application>
 
 </manifest>
