--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,8 @@ android {
             dimension "tier"
             applicationId "com.abdelmun3m.movie_land.free"
             dependencies {
-
+                    freeCompile 'com.google.android.gms:play-services-ads:11.8.0'
+                    freeCompile  'com.google.android.gms:play-services-location:11.8.0'
             }
 
         }
@@ -73,7 +74,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.4.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile project(':volley')
-    compile 'com.google.android.gms:play-services-ads:11.8.0'
-    compile 'com.google.android.gms:play-services-location:11.8.0'
     // compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
