--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     //new dependances
     compile 'com.android.support:cardview-v7:25.4.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile project(':volley')
+    //compile project(':volley')
+    compile 'com.android.volley:volley:1.1.0'
     // compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
